--- a/.github/workflows/gitleak.yml
+++ b/.github/workflows/gitleak.yml
@@ -31,10 +31,9 @@ jobs:
             --report-path gitleaks-report.json \
             --exit-code 1
 
-      - name: Upload Gitleaks Report (optional)
+      - name: Upload Gitleaks Report (if scan fails)
         if: failure()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
           path: gitleaks-report.json
-
