--- a/.github/workflows/gitleak.yml
+++ b/.github/workflows/gitleak.yml
@@ -17,11 +17,10 @@ jobs:
 
       - name: Install Gitleaks
         run: |
-          curl -s https://api.github.com/repos/gitleaks/gitleaks/releases/latest \
-          | grep "browser_download_url.*linux.*amd64" \
-          | cut -d : -f 2,3 \
-          | tr -d \" | wget -qi -
-          chmod +x gitleaks* && mv gitleaks* /usr/local/bin/gitleaks
+          curl -L -o gitleaks.tar.gz https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks_linux_x64.tar.gz
+          tar -xvzf gitleaks.tar.gz
+          chmod +x gitleaks
+          sudo mv gitleaks /usr/local/bin/
 
       - name: Run Gitleaks (Scan Only New Code)
         run: |
@@ -37,3 +36,4 @@ jobs:
         with:
           name: gitleaks-report
           path: gitleaks-report.json
+
