--- a/.github/workflows/gitleak.yml
+++ b/.github/workflows/gitleak.yml
@@ -1,4 +1,4 @@
-name: Secret Scan with Gitleaks (Official Action)
+name: Gitleaks Secret Scan
 
 on:
   push:
@@ -8,18 +8,19 @@ on:
 
 jobs:
   gitleaks-scan:
+    name: Detect Secrets in Code
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Run Gitleaks (Scan Only Changed Code)
+      - name: Run Gitleaks (Working Directory Scan Only)
         uses: gitleaks/gitleaks-action@v2
         with:
           args: detect --source . --no-git --exit-code 1 --report-path=gitleaks-report.json
 
-      - name: Upload Report (on Failure)
+      - name: Upload Gitleaks Report (if scan fails)
         if: failure()
         uses: actions/upload-artifact@v4
         with:
